# rust-firestore-playground

./: Cargo.toml  Dockerfile
cli/: Cargo.toml
cli/src/: main.rs
cli/src/cli/: mod.rs
core/: Cargo.toml
core/src/firestore/: collect.rs  mod.rs  seed.rs  type_mapping.rs
ffi/: Cargo.toml
ffi/src/: api.rs  bridge_generated.rs
flutter_ffi_plugin/: README.md  pubspec.yaml
flutter_ffi_plugin/example/: README.md  pubspec.yaml
flutter_ffi_plugin/example/lib/: main.dart
flutter_ffi_plugin/example/linux/: CMakeLists.txt  my_application.cc
flutter_ffi_plugin/example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter_ffi_plugin/example/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter_ffi_plugin/example/macos/Runner.xcodeproj/: project.pbxproj
flutter_ffi_plugin/example/test/: widget_test.dart
flutter_ffi_plugin/example/windows/: CMakeLists.txt
flutter_ffi_plugin/example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter_ffi_plugin/lib/: bridge_generated.dart  rust_firestore_snapshot_ffi.dart
flutter_ffi_plugin/linux/: CMakeLists.txt  rust_firestore_snapshot_ffi_plugin.cc
flutter_ffi_plugin/macos/: rust_firestore_snapshot_ffi.podspec
flutter_ffi_plugin/macos/Classes/: RustFirestoreSnapshotFfiPlugin.swift
flutter_ffi_plugin/test/: rust_firestore_snapshot_ffi_test.dart
flutter_ffi_plugin/windows/: CMakeLists.txt  rust_firestore_snapshot_ffi_plugin.cpp
server/: Cargo.toml
server/src/: main.rs  server.rs
server/src/server/: compute_metadata.rs
(+6 files in other folders)
