[package]
name = "ffi"
version = "0.1.0"
edition = "2018"


[lib]
name = "ffi"
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.52", features = ["backtrace"] }
tokio = { version = "1.16.1", features = ["full"] }
rust-firestore-snapshot-core = {path = "../core"}
firestore_grpc = "0.95.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flutter_rust_bridge = "1.0"
