[package]
name = "rust-firestore-snapshot-server"
version = "0.1.0"
edition = "2018"

[dependencies]
rust-firestore-snapshot-core = {path = "../core"}
firestore_grpc = "0.95.0"
hyper = { version = "^0.14" }
tokio = { version = "1.16.1", features = ["full"]}
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
